--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -228,7 +228,7 @@
     <br>
 
     <div class="actions">
-      <%= f.submit "Add to Cart" %>
+      <%= f.submit "Add to Cart", :id => "custom_cart_button" %>
     </div>
 
     <div id="product_view">
