--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -259,6 +259,13 @@ h1 {
 
 }
 
+#product_info {
+
+	display: inline-block;
+  margin: 0 0 0 2em;
+
+}
+
 .label_swatch {
 
   width: 20px;
@@ -269,7 +276,7 @@ h1 {
 
 .label_swatch.selected {
 
-  border: solid 2px #ff0000;
+  border: solid 2px #8f6806;
 
 }
 
@@ -372,3 +379,64 @@ h1 {
 	font-size: .5em;
 
 }
+
+#cart_button {
+
+  border: 2px solid #8f6806;
+  padding: 5px;
+  color: #8f6806;
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 1em;
+	font-weight: bold;
+	margin: 0 0 0 1.25em;
+
+}
+
+#cart_button:hover {
+
+	background-color: #8f6806;
+	color: #FFF;
+}
+
+#custom_cart_button {
+
+  border: 2px solid #8f6806;
+  padding: 5px;
+  color: #8f6806;
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 1em;
+	font-weight: bold;
+	background-color: #FFF;
+
+}
+
+#custom_cart_button:hover {
+
+	background-color: #8f6806;
+	color: #FFF;
+}
+
+#checkout_button {
+
+  border: 2px solid #8f6806;
+  padding: 5px;
+  color: #8f6806;
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 1em;
+	font-weight: bold;
+	margin: 0 0 0 0;
+
+}
+
+#checkout_button:hover {
+
+	background-color: #8f6806;
+	color: #FFF;
+}
+
+#product_description {
+
+	margin: 1.25em 0 0 0;
+
+}
+
