--- a/app/views/page/catalog.html.erb
+++ b/app/views/page/catalog.html.erb
@@ -20,8 +20,8 @@
         <%= link_to product do %>
           <%= image_tag(product.main_image(:medium), :class => "catalog_image" , :alt => product.name)%>
           <div class="product_info">
-            <text class="product_title"><%= product.name %></text><br>
-            <text id="price"><%= number_to_currency(product.price, :unit => '$') %></text>
+            <div class="product_title"><%= product.name %></div>
+            <div id="price"><%= number_to_currency(product.price, :unit => '$') %></div>
           </div>
         <% end %>
       </div>  
