--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -192,6 +192,7 @@ h1 {
 .required_section .required_section {
 
 	margin: 0 0 0 0;
+	border: 0;
 
 }
 
@@ -429,6 +430,7 @@ h1 {
 	font-size: 1em;
 	font-weight: bold;
 	background-color: #FFF;
+	cursor: pointer;
 
 }
 
@@ -481,20 +483,71 @@ h1 {
 
 #custom_options p {
 
-  font-size: 1.5em;
+  font-size: 1.3em;
   line-height: 1.3;
   margin: 0 0 .35em 0;
   color: #FFF;
   font-family: verdana, arial, helvetica, sans-serif;
   letter-spacing: .04em;
   border-bottom: 2px solid #666;
-  padding-left: 10px;
+  padding: 2px 0 0 10px;
   background-color: #666;
+
+}
+
+#product_price {
+
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-weight: 600;
+  font-size: 1.5em;
+  color: #777;
+  letter-spacing: .05em;
+  display: inline;
 
 }
 
 #new_custom_product {
 
-	max-width: 40%;
+
+}
+
+#custom_options select {
+
+    color: #555;
+    border: 2px solid #666;
+    background-color: white;
+
+}
+
+#options_panel {
+
+	width: 40%;
+	margin: -1em 1% 0 0;
+	display: inline;
+	float: left;
+
+}
+
+#product_view_panel {
+
+	position: relative;
+	width: 58%;
+	margin-left: 1%;
+	display: inline;
+	float: left;
+
+}
+
+#cart_div {
+
+	display: inline;
+	margin: 0 0 0 1.25em;
+
+}
+
+#about_content p {
+
+	margin: 10px 0 0 0;
+	line-height: 1.5;
 
 }
