--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ body {
 #content {
 
 	margin: .75em 0 0 0;
+	min-height: 350px;
 
 }
 
@@ -245,7 +246,7 @@ h1 {
 
 	width: 100%;
 	float: left;
-	margin: 2em 0 0 0;
+	margin: 3em 0 0 0;
 
 }
 
